--- a/package.json
+++ b/package.json
@@ -1,45 +1,90 @@
 {
   "name": "nuxt-app",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
+    "lint:ts": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
     "lint:prettier": "prettier --check .",
-    "lint": "eslint . --ext .ts,.vue",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
-    "precommit": "lint-staged",
-    "prepare": "husky install"
+    "lint": "npm run lint:ts && npm run lint:style && npm run lint:prettier",
+    "lint:fix": "prettier --write --list-different . && npm run lint:ts -- --fix && npm run lint:style -- --fix",
+    "prepare": "husky install",
+    "lint:staged": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,ts,vue}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,css,md}": [
-      "prettier --write"
-    ]
+    "*.{js,ts,vue}": "eslint --fix --max-warnings 0",
+    "*.{md,json,yaml,html}": "prettier --write",
+    "*.{css,scss,sass,html,vue}": "stylelint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.24.7",
-    "eslint": "^8.57.0",
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@pinia/nuxt": "^0.4.11",
+    "@types/nprogress": "^0.2.0",
+    "@vee-validate/i18n": "^4.11.6",
+    "@vee-validate/rules": "^4.11.3",
+    "@vuepic/vue-datepicker": "^7.2.2",
+    "axios": "^1.5.0",
+    "bignumber.js": "^9.0.2",
+    "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
+    "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.2",
+    "lodash.throttle": "^4.1.1",
+    "mitt": "^3.0.1",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.6",
+    "tw-elements": "^1.0.0",
+    "vee-validate": "^4.11.6",
+    "vue-echarts": "^6.6.1",
+    "vue-i18n": "^9.3.0",
+    "vue-multiselect": "^3.0.0-beta.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
-    "typescript": "^5.4.5"
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "nuxt": "^3.7.0",
+    "postcss": "^8.4.29",
+    "postcss-comment": "^2.0.0",
+    "prettier": "^3.0.3",
+    "prettier-eslint": "^15.0.1",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
+    "stylelint": "^15.10.3",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-tailwindcss": "^0.0.7",
+    "stylelint-prettier": "^4.0.2",
+    "typescript": "^5.2.2"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
